# rename_subtitles

./: CMakeLists.txt  README.md  main.cpp
